Tried to get the filtered users to populate the dropdown. I managed to retrieve the users but I'm having some issues sending it back to the front end #feature